--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -2,48 +2,52 @@
 
 {% block body %}
 <div class="container">
-    <div class="inline">
+    <div class="span4 offest1">
         <h3>Forms</h3>
+    </div>
+    <div class="span3 offset4">
         <a class="btn btn-small" href="{{ path( 'wgauditform_add' ) }}">Add a new form</a>
     </div>
-    <table class="table table-condensed table-hover">
-        <caption>List of existing Forms</caption>
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Is the form Active?</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for form in forms %}
+    <div class="span10 offset1">
+        <table class="table table-condensed table-hover">
+            <caption>List of existing Forms</caption>
+            <thead>
                 <tr>
-                    <td>{{ form.title }}</td>
-                    <td>{{ form.description }}</td>
-                    <td>{% if  form.active == 1 %}
-                            <i class="icon-check"/>
-                        {% else %}
-                            <i class="icon-check-empty"/>
-                        {% endif %}
-                    </td>
-                    <td>
-                        <div class="btn-group">
-                            <a class="btn btn-mini" href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}"><i class="icon-eye-open"></i> View</a>
-                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}"><i class="icon-pencil"></i> Edit</a></li>
-                                <li><a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
-                            </ul>
-                        </div>
-                    </td>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Is the form Active?</th>
+                    <th></th>
                 </tr>
-            {% else %}
-                <tr>
-                    <td colspan="4">no forms yet</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for form in forms %}
+                    <tr>
+                        <td>{{ form.title }}</td>
+                        <td>{{ form.description }}</td>
+                        <td>{% if  form.active == 1 %}
+                                <i class="icon-check"/>
+                            {% else %}
+                                <i class="icon-check-empty"/>
+                            {% endif %}
+                        </td>
+                        <td>
+                            <div class="btn-group">
+                                <a class="btn btn-mini" href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}"><i class="icon-eye-open"></i> View</a>
+                                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}"><i class="icon-pencil"></i> Edit</a></li>
+                                    <li><a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                                </ul>
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="4">no forms yet</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
