--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -70,7 +70,10 @@
         <div class="modal-body">
             <p>One fine body…</p>
         </div>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
     </div>
+</div>
 </html>
 
 
