--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -3,45 +3,50 @@
 {% block body %}
 {{ parent() }}
 <div class="container">
-    <h3>Audits</h3>
-
-    <table class="table table-hover">
-        <caption>List of completed Audits</caption>
-        <thead>
-            <th>Case #</th>
-            <th>Engineer</th>
-            <th>Manager</th>
-            <th>Form</th>
-            <th>Score</th>
-            <th></th>
-        </thead>
-    {% for audit in audits %}
-        {% set result = audit.totalResult %}
-        <tbody>
-            <tr>
-                <td>{{ audit.auditReference }}</td>
-                <td>{{ audit.auditingUser }}</td>
-                <td>{{ audit.controlUser }}</td>
-                <td>{{ audit.auditForm }}</td>
-                <td>{% if audit.failed == true %}
-                    <div class="text-warning">FAILED</div>
-                    {% else %}
-                        {{ result }}
-                    {% endif %}
-                </td>
-                <td width="10%"><a href="{{ path( 'wgaudit_view', { 'id': audit.id } ) }}" class="btn btn-mini"><i class="icon-eye-open"></i> View Audit</a></td>
-            </tr>
-    {% else %}
-            <tr>
-                <td colspan="6">
-                    <p>Nothin yet dude</p>
-                </td>
-            </tr>
-    {% endfor %}
-            <tr>
-                <td colspan="6"><a href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small">Create new Audit</a></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="span4 offest1">
+        <h3>Audits</h3>
+    </div>
+    <div class="span3 offset4">
+        <a data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small">Create new Audit</a>
+    </div>
+    <div class="span10 offset1">
+        <table class="table table-hover">
+            <caption>List of completed Audits</caption>
+            <thead>
+                <tr>
+                    <th>Case #</th>
+                    <th>Engineer</th>
+                    <th>Manager</th>
+                    <th>Form</th>
+                    <th>Score</th>
+                    <th></th>
+                </tr>
+            </thead>
+        {% for audit in audits %}
+            {% set result = audit.totalResult %}
+            <tbody>
+                <tr>
+                    <td>{{ audit.auditReference }}</td>
+                    <td>{{ audit.auditingUser }}</td>
+                    <td>{{ audit.controlUser }}</td>
+                    <td>{{ audit.auditForm }}</td>
+                    <td>{% if audit.failed == true %}
+                        <div class="text-warning">FAILED</div>
+                        {% else %}
+                            {{ result }}
+                        {% endif %}
+                    </td>
+                    <td width="10%"><a href="{{ path( 'wgaudit_view', { 'id': audit.id } ) }}" class="btn btn-mini"><i class="icon-eye-open"></i> View</a></td>
+                </tr>
+        {% else %}
+                <tr>
+                    <td colspan="6">
+                        <p>Nothin yet dude</p>
+                    </td>
+                </tr>
+        {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
