--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -4,61 +4,63 @@
 
 {% block body %}
 <div class="container">
-    <h3>Section: {{ section.title }}</h3>
-    <table class="table table-condensed">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>{{ section.auditform }}</td>
-                <td>{{ section.description }}</td>
-                <td>
-                    <div class="btn-group">
-                        <a class="btn btn-mini" href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}"><i class="icon-pencil"></i> Edit</a>
-                        <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="span10 offset1">
+        <h3>Section: {{ section.title }}</h3>
+        <table class="table table-condensed">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{ section.auditform }}</td>
+                    <td>{{ section.description }}</td>
+                    <td>
+                        <div class="btn-group">
+                            <a class="btn btn-mini" href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}"><i class="icon-pencil"></i> Edit</a>
+                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
-    <table class="table table-condensed">
-        <caption>List of fields contained in this section</caption>
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Section</th>
-                <th>description</th>
-                <th>Weight</th>
-                <th>Fatal</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for field in section.fields %}
-            <tr>
-                <td>{{ field.title }}</td>
-                <td>{{ field.section }}</td>
-                <td>{{ field.description }}</td>
-                <td>{{ field.weight }}</td>
-                <td>{% if field.fatal == 1 %}
-                        <i class="icon-check"/>
-                    {% else %}
-                        <i class="icon-check-empty"/>
-                    {% endif %}
-                </td>
-            </tr>
-        {% else %}
-            <tr>no fields assigned yet</tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <table class="table table-condensed">
+            <caption>List of fields contained in this section</caption>
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Section</th>
+                    <th>description</th>
+                    <th>Weight</th>
+                    <th>Fatal</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for field in section.fields %}
+                <tr>
+                    <td>{{ field.title }}</td>
+                    <td>{{ field.section }}</td>
+                    <td>{{ field.description }}</td>
+                    <td>{{ field.weight }}</td>
+                    <td>{% if field.fatal == 1 %}
+                            <i class="icon-check"/>
+                        {% else %}
+                            <i class="icon-check-empty"/>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% else %}
+                <tr>no fields assigned yet</tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
